# python-lsp-black

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.temp  MAINTENANCE.md  Makefile  README.md  RELEASE.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yaml  config.yml
.github/workflows/: python.yml
pyls_black/: plugin.py
pylsp_black/: _utils.py  plugin.py
tests/: invalid.txt  test_plugin.py
tests/fixtures/: formatted-crlf.py  formatted-line-length.py  formatted.pyi  formatted.txt  unformatted-crlf.py  unformatted-line-length.py  unformatted.pyi  unformatted.txt
tests/fixtures/config/: config.txt  pyproject.toml
