[metadata]
name = pyls-black
version = 0.4.5
author = Rupert Bedford
author_email = rupert@rupertb.com
description = Black plugin for the Python Language Server
url = https://github.com/rupert/pyls-black
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = python-language-server; black>=19.3b0; toml
python_requires = >= 3.6

[options.entry_points]
pyls = pyls_black = pyls_black.plugin

[options.extras_require]
dev = isort>=5.0; flake8; pytest; mypy; pytest

[flake8]
max-line-length = 88
ignore = E203

[mypy]
ignore_missing_imports = true

[isort]
profile = black
