[metadata]
name = python-lsp-black
version = 1.0.1.dev0
author = Python LSP contributors
author_email = andfoy@gmail.com
description = Black plugin for the Python LSP Server
url = https://github.com/python-lsp/python-lsp-black
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = python-lsp-server; black>=19.3b0; toml
python_requires = >= 3.6

[options.entry_points]
pylsp = pylsp_black = pylsp_black.plugin

[options.extras_require]
dev = isort>=5.0; flake8; pytest; mypy; pytest

[flake8]
max-line-length = 88
ignore = E203

[mypy]
ignore_missing_imports = true

[isort]
profile = black
