[metadata]
name = python-lsp-black
version = 1.3.0.dev0
author = Python LSP contributors
author_email = f@fidelramos.net
description = Black plugin for the Python LSP Server
url = https://github.com/python-lsp/python-lsp-black
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/python-lsp/python-lsp-black/issues
    Changelog = https://github.com/python-lsp/python-lsp-black/blob/master/CHANGELOG.md
    Source Code = https://github.com/python-lsp/python-lsp-black
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = python-lsp-server>=1.4.0; black>=22.3.0; toml
python_requires = >= 3.7

[options.entry_points]
pylsp = pylsp_black = pylsp_black.plugin

[options.extras_require]
# add any types-* packages to .pre-commit-config.yaml mypy additional_dependencies
dev = isort>=5.0; flake8; pre-commit; pytest; mypy; pytest; types-pkg_resources; types-setuptools; types-toml

[flake8]
max-line-length = 88
ignore = E203
exclude =
    .venv

[mypy]
ignore_missing_imports = true

[isort]
profile = black
skip_glob = [".venv"]
